--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>Bondi</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary sticky-top shadow">
       <div class="container">
         <a class="navbar-brand" href="#"
           ><img src="images/logo.png" alt="Logo" loading="eager"
@@ -80,9 +80,217 @@
           <h2>We are Good at</h2>
           <p class="text-black-50 text-uppercase">Some of these stuff under</p>
         </div>
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="feat">
+              <div class="icon-holder position-relative">
+                <i class="fa-solid fa-1 position-absolute bottom-0 number"></i>
+                <i
+                  class="fa-solid fa-pencil fa-4x position-absolute bottom-0 icon"
+                ></i>
+              </div>
+              <h4 class="mb-3 mt-3 text-uppercase">Graphic Design</h4>
+              <p class="text-black-50 lh-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                minima sapiente cupiditate culpa. Animi commodi magni unde esse
+                asperiores reprehenderit distinctio.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="feat">
+              <div class="icon-holder position-relative">
+                <i class="fa-solid fa-2 position-absolute bottom-0 number"></i>
+                <i
+                  class="fa-solid fa-tv fa-4x position-absolute bottom-0 icon"
+                ></i>
+              </div>
+              <h4 class="mb-3 mt-3 text-uppercase">Graphic Design</h4>
+              <p class="text-black-50 lh-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                minima sapiente cupiditate culpa. Animi commodi magni unde esse
+                asperiores reprehenderit distinctio.
+              </p>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="feat">
+              <div class="icon-holder position-relative">
+                <i class="fa-solid fa-3 position-absolute bottom-0 number"></i>
+                <i
+                  class="fa-solid fa-plug fa-4x position-absolute bottom-0 icon"
+                ></i>
+              </div>
+              <h4 class="mb-3 mt-3 text-uppercase">Graphic Design</h4>
+              <p class="text-black-50 lh-lg">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta
+                minima sapiente cupiditate culpa. Animi commodi magni unde esse
+                asperiores reprehenderit distinctio.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
     <!-- End creating the features section -->
+
+    <!-- Creating the our-work section -->
+    <div class="our-work text-center pt-5 pb-5">
+      <div class="container">
+        <div class="main-title mt-5 mb-5 position-relative">
+          <img class="mb-4" src="images/title.png" alt="" loading="lazy" />
+          <h2>We Make This</h2>
+          <p class="text-black-50 text-uppercase">prepare to be amazed</p>
+        </div>
+        <ul class="list-unstyled d-flex justify-content-center mt-5 mb-5">
+          <li class="active rounded-pill">All</li>
+          <li>Design</li>
+          <li>Code</li>
+          <li>Photo</li>
+          <li>App</li>
+        </ul>
+        <div class="row">
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="">
+              <img
+                src="images/work-01.jpg"
+                alt=""
+                class="img-fluid"
+                loading="lazy"
+              />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="application">
+              <img
+                src="images/work-02.jpg"
+                alt=""
+                class="img-fluid"
+                loading="lazy"
+              />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="application">
+              <img
+                src="images/work-03.jpg"
+                alt=""
+                class="img-fluid"
+                loading="lazy"
+              />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="application">
+              <img
+                src="images/work-04.jpg"
+                alt=""
+                class="img-fluid"
+                loading="lazy"
+              />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="application">
+              <img
+                src="images/work-05.jpg"
+                alt=""
+                class="img-fluid"
+                loading="lazy"
+              />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="application">
+              <img
+                src="images/work-06.jpg"
+                alt=""
+                class="img-fluid"
+                loading="lazy"
+              />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="application">
+              <img
+                src="images/work-07.jpg"
+                alt=""
+                class="img-fluid"
+                loading="lazy"
+              />
+            </div>
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-3">
+            <div class="box mb-3 bg-white" data-work="application">
+              <img
+                src="images/work-08.jpg"
+                alt=""
+                class="img-fluid"
+                loading="lazy"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mt-5">
+          <a
+            class="btn fw-bold rounded-pill main-btn text-uppercase pt-2 pb-2 ps-4 pe-4"
+            href="#"
+            >I want more</a
+          >
+        </div>
+      </div>
+    </div>
+    <!-- End Creating the our-work section -->
+
+    <!-- Creating stuff section -->
+    <div class="stuff pt-5">
+      <div class="container">
+        <div class="main-title text-center mt-5 mb-5 position-relative">
+          <img src="images/title.png" alt="" loading="lazy" />
+          <h2>Some Stuff About Us</h2>
+          <p class="text-black-50 text-uppercase">The Great Team</p>
+        </div>
+        <p class="description text-center mb-5 text-black-50 m-auto">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+          eligendi nemo dolorum dolorem animi vero velit nesciunt aut odit.
+          Quaerat quae perspiciatis saepe assumenda fugit consectetur,
+          voluptatem odit incidunt facilis?
+        </p>
+        <div class="row align-items-center">
+          <div class="col-lg-4 mb-4 text-center text-md-start">
+            <div class="text">
+              <h4>Retina Design</h4>
+              <p class="text-black-50 fs-6">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Doloribus assumenda nam nisi! Cupiditate consequuntur.
+              </p>
+              <p class="text-black-50 fs-6">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Consectetur eos vel maiores voluptatum soluta recusandae,
+                pariatur tempora vero, id totam aut ipsum debitis exercitationem
+                quidem? Nam quos harum qui quasi.
+              </p>
+              <a
+                class="btn fw-bold rounded-pill main-btn text-uppercase pt-2 pb-2 ps-4 pe-4"
+                href="#"
+                >Order Me One</a
+              >
+            </div>
+          </div>
+          <div class="col-lg-8">
+            <div class="image">
+              <img
+                src="images/laptop.png"
+                alt=""
+                class="img-fluid"
+                loading="lazy"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End Creating stuff section -->
 
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/all.min.js"></script>
