--- a/index.html
+++ b/index.html
@@ -292,6 +292,329 @@
     </div>
     <!-- End Creating stuff section -->
 
+    <!-- creating team section -->
+    <div class="team text-center pb-5 pt-5">
+      <div class="container pb-5 pt-5">
+        <h2 class="fw-bold">Meat The Team</h2>
+        <p class="text-black-50 lh-base">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi
+          incidunt, dolore velit voluptatibus magnam quibusdam, ab optio
+          necessitatibus ea commodi maxime id tempora ut officiis quam, nostrum
+          dolores mollitia praesentium.
+        </p>
+        <div class="row pt-lg-5">
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img
+                class="img-fluid"
+                src="images/team-1.png"
+                alt=""
+                loading="lazy"
+              />
+              <h4 class="p-3 text-light">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                "I don't understand how we got by those troops. I thought we
+                were dead."
+              </blockquote>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img
+                class="img-fluid"
+                src="images/team-2.png"
+                alt=""
+                loading="lazy"
+              />
+              <h4 class="p-3 text-light">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                "I don't understand how we got by those troops. I thought we
+                were dead."
+              </blockquote>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img
+                class="img-fluid"
+                src="images/team-3.png"
+                alt=""
+                loading="lazy"
+              />
+              <h4 class="p-3 text-light">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                "I don't understand how we got by those troops. I thought we
+                were dead."
+              </blockquote>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-3">
+            <div class="box bg-white">
+              <img
+                class="img-fluid"
+                src="images/team-4.png"
+                alt=""
+                loading="lazy"
+              />
+              <h4 class="p-3 text-light">Luke Skywalker</h4>
+              <blockquote class="text-black-50 p-3">
+                "I don't understand how we got by those troops. I thought we
+                were dead."
+              </blockquote>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End creating team section -->
+
+    <!-- creating the tech section -->
+    <div class="techs pt-5 pb-5 text-center">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img
+              src="images/tech-1.png"
+              alt=""
+              class="img-fluid"
+              loading="lazy"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img
+              src="images/tech-2.png"
+              alt=""
+              class="img-fluid"
+              loading="lazy"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img
+              src="images/tech-3.png"
+              alt=""
+              class="img-fluid"
+              loading="lazy"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img
+              src="images/tech-4.png"
+              alt=""
+              class="img-fluid"
+              loading="lazy"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img
+              src="images/tech-1.png"
+              alt=""
+              class="img-fluid"
+              loading="lazy"
+            />
+          </div>
+          <div class="col-sm-6 col-md-4 col-lg-2 mt-3 mb-3">
+            <img
+              src="images/tech-3.png"
+              alt=""
+              class="img-fluid"
+              loading="lazy"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- End creating the tech section -->
+
+    <!-- creating the project section -->
+    <div class="project text-center pt-5 pb-5 text-light">
+      <h2>Start your project now</h2>
+      <p class="text-white-50">
+        Leave your description and we start the engine. Don't worry, you can
+        cancel anytime
+      </p>
+      <div class="d-flex justify-content-center mt-5">
+        <a href="#" class="btn rounded-pill main-btn text-uppercase"
+          >Start Project</a
+        >
+      </div>
+    </div>
+    <!-- End creating the project section -->
+
+    <!-- Creating blog section -->
+    <div class="blog text-center pt-5 pb-5">
+      <div class="container">
+        <div class="main-title mt-5 mb-5 position-relative">
+          <img class="mb-4" src="images/title.png" alt="" loading="lazy" />
+          <h2>Read Our Blog</h2>
+          <p class="text-black-50 text-uppercase">New Stories</p>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="card">
+              <img
+                src="images/blog-1.jpg"
+                class="card-img-top"
+                alt="Blog post"
+              />
+              <div class="card-body">
+                <span class="text-black-50">Jan 17, 2022</span>
+                <h5 class="card-title">Some awesome blog title here</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card">
+              <img
+                src="images/blog-2.jpg"
+                class="card-img-top"
+                alt="Blog post"
+              />
+              <div class="card-body">
+                <span class="text-black-50">Jan 17, 2022</span>
+                <h5 class="card-title">Some awesome blog title here</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="card">
+              <img
+                src="images/blog-3.jpg"
+                class="card-img-top"
+                alt="Blog post"
+              />
+              <div class="card-body">
+                <span class="text-black-50">Jan 17, 2022</span>
+                <h5 class="card-title">Some awesome blog title here</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="d-flex justify-content-center mt-5">
+          <a href="#" class="btn rounded-pill main-btn text-uppercase"
+            >More Stories</a
+          >
+        </div>
+      </div>
+    </div>
+    <!-- End Creating blog section -->
+    <!-- Creating the subscribe section -->
+    <div class="subscribe pt-5 pb-5 text-center text-md-start">
+      <div class="container">
+        <form class="row align-items-center">
+          <div class="col-md-6 col-lg-3 mb-sm-3">
+            <div class="fw-bold fs-5">Subscribe to our Newsletter:</div>
+          </div>
+          <div class="col-md-6 col-lg-7 mb-lg-0 mb-md-0 mb-4">
+            <input
+              type="email"
+              placeholder="Enter your email"
+              class="w-100 text-light p-2 bg-transparent"
+            />
+          </div>
+          <div class="col-md-6 col-lg-2 mt-sm-4 pe-3 ps-3">
+            <input type="submit" value="Subscribe" class="btn rounded-pill" />
+          </div>
+        </form>
+      </div>
+    </div>
+    <!-- End Creating the subscribe section -->
+
+    <!-- Creating the footer -->
+    <footer class="pt-5 pb-5 text-white-50 text-center text-md-start">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-4">
+            <div class="info mb-5">
+              <img
+                src="images/logo.png"
+                alt="logo"
+                class="mb-4"
+                loading="lazy"
+              />
+              <p class="mb-5">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Mollitia suscipit, nesciunt modi cupiditate quasi voluptas,
+                laborum voluptatem pariatur enim ducimus doloremque.
+              </p>
+              <div class="copyright">
+                Created By <span>Mohamed Haroun</span>
+                <div>&copy; 2023 - <span>Graphberry</span></div>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-2">
+            <div class="links">
+              <h5 class="text-light">Links</h5>
+              <ul class="list-unstyled lh-lg">
+                <li>Home</li>
+                <li>Our Services</li>
+                <li>Portfolio</li>
+                <li>Testimonials</li>
+                <li>Support</li>
+                <li>Terms and Condition</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-2">
+            <div class="links">
+              <h5 class="text-light">About Us</h5>
+              <ul class="list-unstyled lh-lg">
+                <li>Sign in</li>
+                <li>Register</li>
+                <li>About Us</li>
+                <li>Blog</li>
+                <li>Contact Us</li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-6 col-lg-4">
+            <div class="contact">
+              <h5 class="text-light">Contact Us</h5>
+              <p class="lh-lg mt-3 mb-5">
+                Get in touch with me via mail phone. i'm Your Call or message
+              </p>
+              <a
+                href="#"
+                class="btn rounded-pill main-btn text-lowercase w-100"
+              >
+                mohamedharoun230@gmail.com
+              </a>
+              <ul class="d-flex mt-5 list-unstyled gap-3">
+                <li>
+                  <a href="#" class="d-block text-light">
+                    <i
+                      class="fa-brands fa-facebook fa-lg facebook rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="d-block text-light">
+                    <i
+                      class="fa-brands fa-twitter fa-lg twitter rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="d-block text-light">
+                    <i
+                      class="fa-brands fa-linkedin fa-lg linkedin rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" class="d-block text-light">
+                    <i
+                      class="fa-brands fa-youtube fa-lg youtube rounded-circle p-2"
+                    ></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- End Creating the footer -->
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/all.min.js"></script>
   </body>
